--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "SecretKey": "123456789034532392"
+  }
 }
