--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -11,5 +11,13 @@
   "AllowedHosts": "*",
   "Jwt": {
     "SecretKey": "123456789034532392"
+  },
+  "Smtp": {
+    "EmailId": "ralukisprojects14@yahoo.com",
+    "Name": "Ioana Sandu",
+    "Password": "contpentruproiecte2001",
+    "Host": "smtp.yahoo.com",
+    "Port": 465,
+    "UseSSL": true
   }
 }
